fixed some formatting, removed vert scrollbar, modified table css

--- a/styles.css
+++ b/styles.css
@@ -13,20 +13,21 @@ body {
     font-weight: 400;
     color: #ffd1af;
     text-align: center;
-    position: absolute;
-    left: 321px;
+    /* position: absolute; */
+    /* left: 321px; */
     top: 91px;
     -webkit-text-stroke: 2px #4C4948 #6e4838;
 }
 
 .table {
-    width: 1180px;
-    height: 725px;
+    width: 100%;
+    height: 100%;
     position: absolute;
-    left: 130px;
+    /* left: 130px; */
     top: 381px;
     object-fit: cover;
     aspect-ratio: 1180/725;
+    
 }
 
 .bread {
